--- a/DailyFarmProject/package.json
+++ b/DailyFarmProject/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^12.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "react-swipeable": "^7.0.2",
